// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload frame details displays when frame entered 1`] = `
<section
  className="row"
>
  <div
    className="grid"
    key="bikeUpload"
  >
    <div
      className="grid-row"
    >
      <div
        className="grid-item--borderless field-label"
      >
        Bike Brand
      </div>
      <div
        className="grid-item--borderless"
      >
        <BrandSelect
          bikeOnly={true}
          brandSelected={1}
          brands={
            Array [
              Object {
                "brand_name": "brand 1",
                "id": 1,
              },
              Object {
                "brand_name": "brand 2",
                "id": 2,
                "supplier": Array [],
              },
              Object {
                "brand_name": "brand 3",
                "id": 3,
                "supplier": Array [
                  1,
                ],
              },
              Object {
                "brand_name": "brand 4",
                "delete": true,
                "id": 4,
              },
              Object {
                "brand_name": "brand 5",
                "changed": true,
                "id": 5,
                "supplier": Array [
                  1,
                  3,
                ],
              },
              Object {
                "brand_name": "brand new",
                "changed": true,
                "dummyKey": "123ABC",
              },
              Object {
                "brand_name": "brand new 2",
                "changed": true,
                "dummyKey": "new",
              },
            ]
          }
          disabled={false}
          error=""
          fieldName="brand"
          isEmptyAllowed={true}
        />
        <button
          onClick={[Function]}
        >
          Add Brand
        </button>
      </div>
    </div>
    <div
      className="grid-row"
    >
      <div
        className="grid-item--borderless field-label"
      >
        Frame Name
      </div>
      <div
        className="grid-item--borderless"
      >
        <FormTextInput
          className=""
          dataType="text"
          error=""
          fieldName="frameName"
          id="frameName"
          inputClass=""
          label=""
          list=""
          placeholder="Frame Name"
          size={100}
          title=""
          value="bicicletta"
        />
      </div>
    </div>
  </div>
</section>
`;

exports[`upload frame details displays when none entered 1`] = `
<section
  className="row"
>
  <div
    className="grid"
    key="bikeUpload"
  >
    <div
      className="grid-row"
    >
      <div
        className="grid-item--borderless field-label"
      >
        Bike Brand
      </div>
      <div
        className="grid-item--borderless"
      >
        <BrandSelect
          bikeOnly={true}
          brands={
            Array [
              Object {
                "brand_name": "brand 1",
                "id": 1,
              },
              Object {
                "brand_name": "brand 2",
                "id": 2,
                "supplier": Array [],
              },
              Object {
                "brand_name": "brand 3",
                "id": 3,
                "supplier": Array [
                  1,
                ],
              },
              Object {
                "brand_name": "brand 4",
                "delete": true,
                "id": 4,
              },
              Object {
                "brand_name": "brand 5",
                "changed": true,
                "id": 5,
                "supplier": Array [
                  1,
                  3,
                ],
              },
              Object {
                "brand_name": "brand new",
                "changed": true,
                "dummyKey": "123ABC",
              },
              Object {
                "brand_name": "brand new 2",
                "changed": true,
                "dummyKey": "new",
              },
            ]
          }
          disabled={false}
          error=""
          fieldName="brand"
          isEmptyAllowed={true}
        />
        <button
          onClick={[Function]}
        >
          Add Brand
        </button>
      </div>
    </div>
    <div
      className="grid-row"
    >
      <div
        className="grid-item--borderless field-label"
      >
        Frame Name
      </div>
      <div
        className="grid-item--borderless"
      >
        <FormTextInput
          className=""
          dataType="text"
          error=""
          fieldName="frameName"
          id="frameName"
          inputClass=""
          label=""
          list=""
          placeholder="Frame Name"
          size={100}
          title=""
          value=""
        />
      </div>
    </div>
  </div>
</section>
`;
